--- a/style.css
+++ b/style.css
@@ -501,7 +501,44 @@ button:hover {
 .icon-button:active {
     background-color: rgba(255, 255, 255, 0.2); /* Hiệu ứng khi nhấn */
 }
+.modal-fullscreen {
+    margin-left: -40px;
+    margin-right: -50px;
+    margin-top: -80px;
+    margin-bottom: -10px;
+    width: 123%;
+    height: 110;
+    margin: -100;
+    overflow-y: hidden; /* Ẩn thanh cuộn dọc */
+    padding: 0;
+  }
 
+  /* Đảm bảo iframe chiếm toàn bộ không gian của modal */
+  #embedded-page {
+    position: relative; 
+    margin: 0;
+    margin-left: -15px;
+    margin-top: -70px; 
+    width: 100%; 
+    height: 110vh; 
+    overflow-y: hidden;
+    border: none; 
+    padding: 0; 
+  }
+
+  /* Loại bỏ padding trong body modal */
+  .modal-body {
+    margin: -100;
+    overflow-y: hidden; /* Ẩn thanh cuộn dọc */
+    padding: 0;
+  }
+
+  /* Đảm bảo modal header vẫn hiển thị */
+  .modal-header {
+    margin-top: 0px;
+    /* padding: 1rem;*/
+    background-color: #f8f9fa; /* Màu nền tùy chỉnh */
+  }
 
 }
 
